<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="5dp"
    android:id="@+id/rootbackground"
    android:paddingEnd="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvBackgroundTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/back_ground"
            android:fontFamily="@font/nutino_extrabold"
            android:layout_marginTop="23dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginBottom="8dp"/>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/TabTextAppearance"


            app:tabIndicatorColor="?attr/colorPrimary"
            app:tabSelectedTextColor="?attr/colorPrimary"
            app:tabTextColor="#DADADA">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:layout_height="wrap_content"

                android:text="@string/all" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:layout_height="wrap_content"

                android:text="@string/simple" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/animal" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/food" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/holiday" />
        </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBackgrounds"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="260dp"
            android:layout_marginTop="12dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
