<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:padding="@dimen/_16sdp"
    android:backgroundTint="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_do_you_think_about_app"
            android:textStyle="bold"
            android:fontFamily="@font/nutino_extrabold"
            android:textSize="16sp"
            android:textColor="#222222"
            android:paddingBottom="@dimen/_8sdp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:isIndicator="false"
            android:progressTint="@color/yellow"
            android:secondaryProgressTint="@color/yellow"
            android:indeterminateTint="@color/yellow"
            android:layout_marginTop="@dimen/_4sdp" />

        <TextView
            android:id="@+id/tvHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_rate_us"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_medium"
            android:textColor="#666666"
            android:layout_marginTop="@dimen/_6sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="@dimen/_16sdp">

            <TextView
                android:id="@+id/btnLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/later"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="#666666"
                android:padding="@dimen/_12sdp" />

            <TextView
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/send_rate"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:padding="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
