<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >


    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="@dimen/sdp_0"
        android:layout_height="@dimen/sdp_0"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/onboard3" />


    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textStyle="bold"

        android:fontFamily="@font/nunito_bold"
        android:textColor="#AAAABB"
        android:layout_marginTop="@dimen/sdp_31"
        android:layout_marginEnd="@dimen/sdp_19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/progressDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/sdp_36"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <View
            android:layout_width="@dimen/sdp_6"
            android:layout_height="@dimen/sdp_6"

            android:background="@drawable/dot" />
        <View
            android:layout_width="@dimen/sdp_16"
            android:layout_height="@dimen/sdp_6"
            android:layout_marginStart="@dimen/sdp_6"
            android:background="@drawable/dotfilled" />

        <View
            android:layout_width="@dimen/sdp_6"
            android:layout_height="@dimen/sdp_6"
            android:layout_marginStart="@dimen/sdp_6"
            android:background="@drawable/dot" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/sdp_0"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"

        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/sdp_64"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="@dimen/sdp_0"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_option"
        android:textColor="@color/gray_500"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_medium"
        android:gravity="center"
        android:layout_marginTop="@dimen/sdp_90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/op1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_142"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/sdp_30"

        app:strokeColor="@color/purple_500"
        app:strokeWidth="@dimen/sdp_2"
        app:cardCornerRadius="@dimen/sdp_16"
        app:cardElevation="@dimen/sdp_0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/nunito_medium"
            android:padding="@dimen/sdp_16"
            android:text="@string/age_1"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/op2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_16"
        app:layout_constraintTop_toBottomOf="@+id/op1"
        android:layout_marginHorizontal="@dimen/sdp_30"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="@dimen/sdp_2"
        app:cardCornerRadius="@dimen/sdp_16"
        app:cardElevation="@dimen/sdp_0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/sdp_16"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/age_2"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/op3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_16"
        app:layout_constraintTop_toBottomOf="@+id/op2"
        android:layout_marginHorizontal="@dimen/sdp_30"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="@dimen/sdp_2"
        app:cardCornerRadius="@dimen/sdp_16"
        app:cardElevation="@dimen/sdp_0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/nunito_medium"
            android:padding="@dimen/sdp_16"
            android:text="@string/age_3"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/op4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_16"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="@dimen/sdp_2"
        app:layout_constraintTop_toBottomOf="@+id/op3"
        android:layout_marginHorizontal="@dimen/sdp_30"
        app:cardCornerRadius="@dimen/sdp_16"
        app:cardElevation="@dimen/sdp_0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/sdp_16"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/age_4"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/op5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sdp_16"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="@dimen/sdp_2"
        app:layout_constraintTop_toBottomOf="@+id/op4"
        android:layout_marginHorizontal="@dimen/sdp_30"
        app:cardCornerRadius="@dimen/sdp_16"
        app:cardElevation="@dimen/sdp_0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/sdp_16"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/age_5"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="@dimen/sdp_280"
        android:layout_height="@dimen/sdp_49"
        android:text="@string/continute"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:enabled="false"
        android:background="@drawable/btn_continue_selector"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/sdp_28"

        android:fontFamily="@font/nunito_bold"
        android:layout_marginBottom="@dimen/sdp_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
